# llm-search-forensics

./: .gitignore  README.md  main.py  pyproject.toml
src/index/: build_indexes.py
src/ingest/: chunk.py  html_fetch.py  ingest_urls.py
src/retrieval/: search.py
tests/index/: test_build_indexes.py
tests/ingest/: test_html_fetch.py  test_ingest_core.py
tests/retrieval/: test_search.py
